unpackaged/objects/AccountEdit__c.object
<CustomObject>
    <description>Contains Temporary Data Used to Update Accounts via Trigger</description>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>AccountName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Name Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AccountEdits</relationshipLabel>
        <relationshipName>AccountEdits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>City Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fax Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Record_Type_Id_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Type Id Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type_Id__c</fullName>
        <label>Record Type Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Street Address Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Website Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zip_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zip Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>AccountEdit</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AccountEdits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>